base de la page index

--- a/index.html
+++ b/index.html
@@ -4,16 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header>
-
+        <nav>
+            <ul>
+                <li><a href="">Connexion</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-
+        <section>
+            <h1>Connexion</h1>
+            <p>Pour vous connectez à l’intranet, veillez renseigner votre identifiant et mot de passe </p>
+            <form action="" method="get">
+                <label for="">
+                    <input type="email" name="mail" id="">
+                </label>
+                <label for="">
+                    <input type="password" name="mdp" id="">
+                </label>
+            </form>
+        </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
