ajout page d'acceuil

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Déonnexion</a></li>
+                <li><a href="">Connexion</a></li>
             </ul>
         </nav>
     </header>
