--- a/static/connection_réussie.html
+++ b/static/connection_réussie.html
@@ -7,19 +7,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/accueil.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="">Liste</a></li>
-                <li><a href="">Connexion</a></li>
+                <li><img src="" alt="PP"></li>
+                <li><a href="../index.html">Déconnexion</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <section>
+            <h1>Bienvenue sur l'intranet</h1>
+            <p>La plate-forme qui vous permet de retrouver tous vos collaborateur</p>
+            <figure>
+                <figcaption>
+                    <img src="" alt="">
+                    <div class="info_utilisateur">
+                        <p>Joe Joestar (26 ans)</p>
+                        <p>Saint Denis, France</p>
+                        <div>
+                            <img src="../asset/email.png" alt="">
+                            <p>jjoestar@gmail.com</p>
+                        </div>
+                        <div>
+                            <img src="../asset/telephone.png" alt="">
+                            <p>06-12-34-56-78</p>
+                        </div>
+                        <div>
+                            <img src="../asset/gateau-danniversaire.png" alt="">
+                            <p>Anniversaire : 1 mars</p>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+            <button><a href="./liste_utilisateur.html">DIRE BONJOUR A QUELQU'UN D'AUTRE</a></button>
+        </section>
     </main>
     <footer>
 
