--- a/static/liste_utilisateur.html
+++ b/static/liste_utilisateur.html
@@ -19,5 +19,73 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <figure>
+            <figcaption>
+                <img src="" alt="">
+                <div class="info_utilisateur">
+                    <p>Joe Joestar (26 ans)</p>
+                    <p>Saint Denis, France</p>
+                    <div>
+                        <img src="../asset/email.png" alt="">
+                        <p>jjoestar@gmail.com</p>
+                    </div>
+                    <div>
+                        <img src="../asset/telephone.png" alt="">
+                        <p>06-12-34-56-78</p>
+                    </div>
+                    <div>
+                        <img src="../asset/gateau-danniversaire.png" alt="">
+                        <p>Anniversaire : 1 mars</p>
+                    </div>
+                </div>
+            </figcaption>
+        </figure>
+        <figure>
+            <figcaption>
+                <img src="" alt="">
+                <div class="info_utilisateur">
+                    <p>Joe Joestar (26 ans)</p>
+                    <p>Saint Denis, France</p>
+                    <div>
+                        <img src="../asset/email.png" alt="">
+                        <p>jjoestar@gmail.com</p>
+                    </div>
+                    <div>
+                        <img src="../asset/telephone.png" alt="">
+                        <p>06-12-34-56-78</p>
+                    </div>
+                    <div>
+                        <img src="../asset/gateau-danniversaire.png" alt="">
+                        <p>Anniversaire : 1 mars</p>
+                    </div>
+                </div>
+            </figcaption>
+        </figure>
+        <figure>
+            <figcaption>
+                <img src="" alt="">
+                <div class="info_utilisateur">
+                    <p>Joe Joestar (26 ans)</p>
+                    <p>Saint Denis, France</p>
+                    <div>
+                        <img src="../asset/email.png" alt="">
+                        <p>jjoestar@gmail.com</p>
+                    </div>
+                    <div>
+                        <img src="../asset/telephone.png" alt="">
+                        <p>06-12-34-56-78</p>
+                    </div>
+                    <div>
+                        <img src="../asset/gateau-danniversaire.png" alt="">
+                        <p>Anniversaire : 1 mars</p>
+                    </div>
+                </div>
+            </figcaption>
+        </figure>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
