--- a/static/connection_réussie.html
+++ b/static/connection_réussie.html
@@ -13,8 +13,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Liste</a></li>
-                <li><img src="" alt="PP"></li>
+                <li><a href="./liste_utilisateur.html">Liste</a></li>
+                <li> <a href="./modification.html"><img src="" alt="PP"></a></li>
                 <li><a href="../index.html">Déconnexion</a></li>
             </ul>
         </nav>
