--- a/static/liste_utilisateur.html
+++ b/static/liste_utilisateur.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="">Liste</a></li>
-                <li><img src="" alt="PP"></li>
+                <li> <a href="./modification.html"><img src="" alt="PP"></a></li>
                 <li><a href="../index.html">Déconnexion</a></li>
             </ul>
         </nav>
