css pour la page des liste

--- a/static/liste_utilisateur.html
+++ b/static/liste_utilisateur.html
@@ -7,82 +7,84 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/accueil.css">
+    <link rel="stylesheet" href="../css/liste.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="">Liste</a></li>
+                <li><a href="./liste_utilisateur.html">Liste</a></li>
                 <li> <a href="./modification.html"><img src="" alt="PP"></a></li>
                 <li><a href="../index.html">Déconnexion</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <figure>
-            <figcaption>
-                <img src="" alt="">
-                <div class="info_utilisateur">
-                    <p>Joe Joestar (26 ans)</p>
-                    <p>Saint Denis, France</p>
-                    <div>
-                        <img src="../asset/email.png" alt="">
-                        <p>jjoestar@gmail.com</p>
+        <div class="liste">
+            <figure>
+                <figcaption>
+                    <img src="" alt="">
+                    <div class="info_utilisateur">
+                        <p>Joe Joestar (26 ans)</p>
+                        <p>Saint Denis, France</p>
+                        <div>
+                            <img src="../asset/email.png" alt="">
+                            <p>jjoestar@gmail.com</p>
+                        </div>
+                        <div>
+                            <img src="../asset/telephone.png" alt="">
+                            <p>06-12-34-56-78</p>
+                        </div>
+                        <div>
+                            <img src="../asset/gateau-danniversaire.png" alt="">
+                            <p>Anniversaire : 1 mars</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="../asset/telephone.png" alt="">
-                        <p>06-12-34-56-78</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <figcaption>
+                    <img src="" alt="">
+                    <div class="info_utilisateur">
+                        <p>Joe Joestar (26 ans)</p>
+                        <p>Saint Denis, France</p>
+                        <div>
+                            <img src="../asset/email.png" alt="">
+                            <p>jjoestar@gmail.com</p>
+                        </div>
+                        <div>
+                            <img src="../asset/telephone.png" alt="">
+                            <p>06-12-34-56-78</p>
+                        </div>
+                        <div>
+                            <img src="../asset/gateau-danniversaire.png" alt="">
+                            <p>Anniversaire : 1 mars</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="../asset/gateau-danniversaire.png" alt="">
-                        <p>Anniversaire : 1 mars</p>
+                </figcaption>
+            </figure>
+            <figure>
+                <figcaption>
+                    <img src="" alt="">
+                    <div class="info_utilisateur">
+                        <p>Joe Joestar (26 ans)</p>
+                        <p>Saint Denis, France</p>
+                        <div>
+                            <img src="../asset/email.png" alt="">
+                            <p>jjoestar@gmail.com</p>
+                        </div>
+                        <div>
+                            <img src="../asset/telephone.png" alt="">
+                            <p>06-12-34-56-78</p>
+                        </div>
+                        <div>
+                            <img src="../asset/gateau-danniversaire.png" alt="">
+                            <p>Anniversaire : 1 mars</p>
+                        </div>
                     </div>
-                </div>
-            </figcaption>
-        </figure>
-        <figure>
-            <figcaption>
-                <img src="" alt="">
-                <div class="info_utilisateur">
-                    <p>Joe Joestar (26 ans)</p>
-                    <p>Saint Denis, France</p>
-                    <div>
-                        <img src="../asset/email.png" alt="">
-                        <p>jjoestar@gmail.com</p>
-                    </div>
-                    <div>
-                        <img src="../asset/telephone.png" alt="">
-                        <p>06-12-34-56-78</p>
-                    </div>
-                    <div>
-                        <img src="../asset/gateau-danniversaire.png" alt="">
-                        <p>Anniversaire : 1 mars</p>
-                    </div>
-                </div>
-            </figcaption>
-        </figure>
-        <figure>
-            <figcaption>
-                <img src="" alt="">
-                <div class="info_utilisateur">
-                    <p>Joe Joestar (26 ans)</p>
-                    <p>Saint Denis, France</p>
-                    <div>
-                        <img src="../asset/email.png" alt="">
-                        <p>jjoestar@gmail.com</p>
-                    </div>
-                    <div>
-                        <img src="../asset/telephone.png" alt="">
-                        <p>06-12-34-56-78</p>
-                    </div>
-                    <div>
-                        <img src="../asset/gateau-danniversaire.png" alt="">
-                        <p>Anniversaire : 1 mars</p>
-                    </div>
-                </div>
-            </figcaption>
-        </figure>
+                </figcaption>
+            </figure>
+        </div>
     </main>
     <footer>
 
