ajout zone de recherche

--- a/static/liste_utilisateur.html
+++ b/static/liste_utilisateur.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +20,16 @@
         </nav>
     </header>
     <main>
+        <div>
+            <h1>Liste des collaborateurs</h1>
+            <input type="text">
+            <label for="nom">Rechercher par :
+                <input id="nom" type="search" placeholder="Nom">
+            </label>
+            <label for="categorie">Catégorie :
+                <input type="text" id="categorie">
+            </label>
+        </div>
         <div class="liste">
             <figure>
                 <figcaption>
