ajout de la partie recherche (non fonctionnel)

--- a/static/liste_utilisateur.html
+++ b/static/liste_utilisateur.html
@@ -20,8 +20,8 @@
         </nav>
     </header>
     <main>
-        <div>
-            <h1>Liste des collaborateurs</h1>
+        <h1>Liste des collaborateurs</h1>
+        <div class="recherche">
             <input type="text">
             <label for="nom">Rechercher par :
                 <input id="nom" type="search" placeholder="Nom">
