première modification de la police d'écriture

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Acceuil</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Aguafina+Script&family=Caudex:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
     <main>
         <section>
             <h1>Connexion</h1>
-            <p>Pour vous connectez à l’intranet, veillez renseigner votre identifiant et mot de passe </p>
+            <p>Pour vous connectez à l'intranet, veillez renseigner votre identifiant et mot de passe </p>
             <form action="./static/connection_réussie.html" method="get">
                 <label for="mail">Email :</label>
                 <input type="email" name="mail" id="mail">
