--- a/static/connection_réussie.html
+++ b/static/connection_réussie.html
@@ -27,7 +27,8 @@
                 <figcaption>
                     <img src="" alt="">
                     <div class="info_utilisateur">
-                        <p>Joe Joestar (26 ans)</p>
+
+                        <p class="nom_utilisateur">Joe Joestar (26 ans)</p>
                         <p>Saint Denis, France</p>
                         <div>
                             <img src="../asset/email.png" alt="">
